Fixed nav flicker issue when resizing browser

--- a/src/design/content/styles/style.css
+++ b/src/design/content/styles/style.css
@@ -143,32 +143,98 @@ textarea{
 
 .wrapper > .app{
 	background:#ffffff;
-	position:absolute;
+	position:fixed;
 	top:0;
 	left:0;
-	width:100%;
-	height:100%;
+	width:80%;
+	height:90%;
+	margin:5% 10%;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-ms-box-sizing:border-box;
 	box-sizing:border-box;
 	padding-left:30px;
-	-webkit-transition: -webkit-transform .5s;
-	-moz-transition: -moz-transform .5s;
-	-o-transition: -o-transform .5s;
-	-ms-transition: -ms-transform .5s;
-	transition: transform .5s;
+	-webkit-transition: opacity .6s, z-index 0s linear .6s, -webkit-transform 0s linear .6s;
+	-moz-transition: opacity .6s, z-index 0s linear .6s, -webkit-transform 0s linear .6s;
+	-o-transition: opacity .6s, z-index 0s linear .6s, -webkit-transform 0s linear .6s;
+	-ms-transition: opacity .6s, z-index 0s linear .6s, -webkit-transform 0s linear .6s;
+	transition: opacity .6s, z-index 0s linear .6s, -webkit-transform 0s linear .6s;
 
 	-webkit-transform: translate3d(100%, 0, 0);
 	-moz-transform: translate3d(100%, 0, 0);
 	-o-transform: translate3d(100%, 0, 0);
 	-ms-transform: translate3d(100%, 0, 0);
 	transform: translate3d(100%, 0, 0);
+
+	opacity:0;
+
+	z-index:-1;
+	-webkit-box-shadow:4px 4px 8px rgba(0,0,0,.4);
+	box-shadow:4px 4px 8px rgba(0,0,0,.4);
+	border-radius:10px;
 }
 
 .wrapper.app-view > .app{
+	-webkit-transition: opacity .6s, z-index 0s;
+	-moz-transition: opacity .6s, z-index 0s;
+	-o-transition: opacity .6s, z-index 0s;
+	-ms-transition: opacity .6s, z-index 0s;
+	transition: opacity .6s, z-index 0s;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	opacity:1;
+	z-index:10;
+
 	-webkit-transform: translate3d(0, 0, 0);
 	-moz-transform: translate3d(0, 0, 0);
 	-o-transform: translate3d(0, 0, 0);
 	-ms-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
+}
+
+@media screen and (max-width: 42em) {
+	.wrapper > .app{
+		background:#ffffff;
+		position:fixed;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		margin:0;
+		overflow-y:auto;
+		box-sizing:border-box;
+		padding-left:30px;
+		-webkit-transition: -webkit-transform .5s, opacity 0s linear .5s;
+		-moz-transition: -moz-transform .5s, opacity 0s linear .5s;
+		-o-transition: -o-transform .5s, opacity 0s linear .5s;
+		-ms-transition: -ms-transform .5s, opacity 0s linear .5s;
+		transition: transform .5s; opacity 0s linear .5s;
+
+		-webkit-transform: translate3d(100%, 0, 0);
+		-moz-transform: translate3d(100%, 0, 0);
+		-o-transform: translate3d(100%, 0, 0);
+		-ms-transform: translate3d(100%, 0, 0);
+		transform: translate3d(100%, 0, 0);
+
+		box-shadow:none;
+		border-radius:0;
+		z-index:0;
+		opacity:0;
+	}
+
+	.wrapper.app-view > .app{
+		-webkit-transition: -webkit-transform .5s;
+		-moz-transition: -moz-transform .5s;
+		-o-transition: -o-transform .5s;
+		-ms-transition: -ms-transform .5s;
+		transition: transform .5s;
+		-webkit-transform: translate3d(0, 0, 0);
+		-moz-transform: translate3d(0, 0, 0);
+		-o-transform: translate3d(0, 0, 0);
+		-ms-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+		z-index:0;
+	}
 }
 
 .wrapper > .app h2.image{
